[package]
name = "do-updater"
version = "1.0.1"
authors = ["Tim Buckley <timothyb89@gmail.com>"]
edition = "2018"

[dependencies]
digitalocean = { git = "https://github.com/timothyb89/digitalocean", branch = "nillable-gateways" }
err-derive = "0.3"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
log = "0.4"
env_logger = "0.8"
clokwerk = "0.3"
